--- a/src/app/components/students-card/students-card.component.scss
+++ b/src/app/components/students-card/students-card.component.scss
@@ -3,5 +3,11 @@
     display: flex;
     flex-direction: column;
     margin: 4px;
+    max-width: 30%;
+    padding: 4px;
 }
 
+.container{
+  display: flex;
+  flex-direction: column;
+}
