--- a/src/app/components/students-card/students-card.component.html
+++ b/src/app/components/students-card/students-card.component.html
@@ -1,5 +1,5 @@
 <div class="container">
 <div *ngIf="studentData" class="card">
-<h5>{{studentData.name}} {{studentData.surname}}</h5>
+<div>{{studentData.name}} {{studentData.surname}}</div>
 </div>
 </div>
