--- a/src/app/components/students-card/students-card.component.scss
+++ b/src/app/components/students-card/students-card.component.scss
@@ -1,7 +1,7 @@
 .card{
     border: 3px solid black;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin: 4px;
     max-width: 30%;
     padding: 4px;
